--- a/render.yaml
+++ b/render.yaml
@@ -2,12 +2,11 @@ services:
   - type: web
     name: itr-tax-bot-backend
     runtime: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: python main.py
+    runtimeVersion: 3.11
+    buildCommand: bash build.sh
+    startCommand: python backend/main.py
     envVars:
       - key: GEMINI_API_KEY
         sync: false
       - key: MODEL_NAME
         value: gemini-2.5-flash
-      - key: PYTHON_VERSION
-        value: 3.11
