--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,5 @@
-# Environment variables
-.env
-.env.local
-.env.*.local
-
-# Python
+rag_env/
 __pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-env/
-venv/
-ENV/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# Logs
-logs/
-*.log
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Node
-node_modules/
-.npm
-dist/
+*.pyc
+model/
+.env
